--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -417,6 +417,7 @@ input, select, textarea {
 		.row.gtr-50 {
 			margin-top: -25px;
 			margin-left: -25px;
+			width: 50%;
 		}
 
 			.row.gtr-50 > * {
